--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.6.16"
+    "@hono/valibot-validator": "^0.5.2",
+    "hono": "^4.6.16",
+    "valibot": "^1.0.0-beta.12"
   },
   "devDependencies": {
     "@types/bun": "latest"
